# ansible-role-tripleo-browbeat

./: README.md  setup.cfg
playbooks/: baremetal-virt-undercloud-tripleo-browbeat.yml  quickstart-browbeat.yml
tasks/: check.yml  gather.yml  install.yml  main.yml  run.yml
vars/: main.yml
