[metadata]
name = ansible-role-tripleo-browbeat
summary = ansible-role-tripleo-browbeat - A ansible role for running Browbeat performance tests on a cloud
description-file =
    README.md
author = RedHat Perf Team
author-email = jkilpatr@redhat.com
home-page = https://github.com/jkilpatr/ansible-role-tripleo-browbeat
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 1 - Alpha
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/browbeat/defaults = defaults/*
    usr/local/share/ansible/roles/browbeat/handlers = handlers/*
    usr/local/share/ansible/roles/browbeat/meta = meta/*
    usr/local/share/ansible/roles/browbeat/tasks = tasks/*
    usr/local/share/ansible/roles/browbeat/templates = templates/*
    usr/local/share/ansible/roles/browbeat/files = files/*
    usr/local/share/ansible/roles/browbeat/tests = tests/*
    usr/local/share/ansible/roles/browbeat/vars = vars/*
    usr/local/share/ansible/roles/browbeat/library = library/*
    usr/local/share/ansible/roles/browbeat/roles = roles/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
